--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
- <meta charset="UTF-8">
- <title>Передача сложных данных</title>
-</head>
-<body>
- <h1>{{header}}</h1>
- <p>Имя: {{user.name}} Age: {{user.age}}</p>
- <p>Адрес: ул. {{address.0}}, д. {{address.1}}, кв.
- {{address.2}}</p>
- <p>Владеет языками: {{langs.0}}, {{langs.1}}</p>
-</body>
-</html>
+{% extends "firstapp/base.html" %}
+{% block title %}Index{% endblock title %}
+{% block header %}Главная страница{% endblock header %}
+{% block content%}
+<p>Категории продуктов</p>
+{% for i in cat %}
+    <li>{{ i }}</li>
+ {% endfor %}
+{% endblock content %}
